<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="conversion">Conversion:</string>
    <string name="fahrenheit_to_celsius">Fahrenheit-to-Celsius</string>
    <string name="celsius_to_fahrenheit">Celsius-to-Fahrenheit</string>
    <string name="equalSign">=</string>
    <string name="enter_value_here">Enter value here</string>
    <string name="convert">CONVERT</string>
    <string name="historyTitle">History</string>
    <string name="resultString">Result</string>
    <string name="clear_history">Clear History</string>
</resources>
